--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M3</version>
       </plugin>
+
+      <!-- По умолчанию плагин запускает все файлы подходящие под шаблон-->
+      <!--			"**/IT*.java"	-->
+      <!--			"**/*IT.java"	-->
+      <!--			"**/*ITCase.java"	-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
@@ -100,16 +105,19 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
+      <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.3.2</version>
+      <version>2.6</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider -->
     <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-surefire-provider</artifactId>
-      <version>1.3.2</version>
-      <scope>test</scope>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>3.141.59</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>4.2.2</version>
     </dependency>
   </dependencies>
 </project>
