--- a/pom.xml
+++ b/pom.xml
@@ -119,5 +119,10 @@
       <artifactId>webdrivermanager</artifactId>
       <version>4.2.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-console-standalone</artifactId>
+      <version>1.6.2</version>
+    </dependency>
   </dependencies>
 </project>
